# django-rest-elasticsearch-7

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
compose/elasticsearch/: Dockerfile
compose/python/: Dockerfile
compose/python/requirements/: local.txt
example_project/config/: urls.py
example_project/config/settings/: base.py  production.py
example_project/example_project/blog/: models.py
example_project/example_project/users/: models.py
rest_framework_elasticsearch/: __init__.py  es_filters.py  es_pagination.py
rest_framework_elasticsearch_7/: __init__.py
